Add GDJS into the new IDE

--- a/newIDE/public/index.html
+++ b/newIDE/public/index.html
@@ -27,6 +27,55 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+
+    <!-- GDevelop.js core -->
     <script src="%PUBLIC_URL%/libGD.js"></script>
+
+    <!-- GDJS game engine -->
+    <script src="Runtime/libs/jshashtable.js"></script>
+    <script src="Runtime/gd.js"></script>
+    <script src="Runtime/libs/hshg.js"></script>
+    <script src="Runtime/inputmanager.js"></script>
+    <script src="Runtime/timemanager.js"></script>
+    <script src="Runtime/runtimeobject.js"></script>
+    <script src="Runtime/profiler.js"></script>
+    <script src="Runtime/runtimescene.js"></script>
+    <script src="Runtime/scenestack.js"></script>
+    <script src="Runtime/polygon.js"></script>
+    <script src="Runtime/force.js"></script>
+    <script src="Runtime/layer.js"></script>
+    <script src="Runtime/timer.js"></script>
+    <script src="Runtime/runtimegame.js"></script>
+    <script src="Runtime/variable.js"></script>
+    <script src="Runtime/variablescontainer.js"></script>
+    <script src="Runtime/eventscontext.js"></script>
+    <script src="Runtime/runtimebehavior.js"></script>
+    <script src="Runtime/spriteruntimeobject.js"></script>
+    <script src="Runtime/events-tools/commontools.js"></script>
+    <script src="Runtime/events-tools/runtimescenetools.js"></script>
+    <script src="Runtime/events-tools/inputtools.js"></script>
+    <script src="Runtime/events-tools/objecttools.js"></script>
+    <script src="Runtime/events-tools/cameratools.js"></script>
+    <script src="Runtime/events-tools/soundtools.js"></script>
+    <script src="Runtime/events-tools/storagetools.js"></script>
+    <script src="Runtime/events-tools/stringtools.js"></script>
+    <script src="Runtime/events-tools/windowtools.js"></script>
+    <script src="Runtime/events-tools/networktools.js"></script>
+    <script src="Extensions/PlatformBehavior/platformerobjectruntimebehavior.js"></script>
+    <script src="Extensions/PlatformBehavior/platformruntimebehavior.js"></script>
+    <script src="Extensions/TextObject/textruntimeobject-pixi-renderer.js"></script>
+    <script src="Extensions/TextObject/textruntimeobject.js"></script>
+    <script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject-pixi-renderer.js"></script>
+    <script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject.js"></script>
+    <script src="Runtime/pixi-renderers/pixi.js"></script>
+    <script src="Runtime/pixi-renderers/pixi-filters-tools.js"></script>
+    <script src="Runtime/pixi-renderers/runtimegame-pixi-renderer.js"></script>
+    <script src="Runtime/pixi-renderers/runtimescene-pixi-renderer.js"></script>
+    <script src="Runtime/pixi-renderers/layer-pixi-renderer.js"></script>
+    <script src="Runtime/pixi-renderers/pixi-image-manager.js"></script>
+    <script src="Runtime/pixi-renderers/spriteruntimeobject-pixi-renderer.js"></script>
+    <script src="Runtime/pixi-renderers/loadingscreen-pixi-renderer.js"></script>
+    <script src="Runtime/howler-sound-manager/howler.min.js"></script>
+    <script src="Runtime/howler-sound-manager/howler-sound-manager.js"></script>
   </body>
 </html>
